OrderProducerService.Api/k8s/k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-producer-deployment
  labels:
    app: order-producer
    tier: backend
    environment: production
  annotations:
    description: "Microsserviço responsável por criar contatos"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-producer
  template:
    metadata:
      labels:
        app: order-producer
        tier: backend
        environment: production
      annotations:
        description: "Pod do microsserviço order-producer"
    spec:
      containers:
        - name: order-producer
          image: acrfiap2025.azurecr.io/k8s:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: order-producer-volume
              mountPath: /app/logs/order-producer
          readinessProbe:
            httpGet:
              path: /order-producer/health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /order-producer/health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3
      imagePullSecrets:
        - name: acr-order-producer
      volumes:
        - name: order-producer-volume
          persistentVolumeClaim:
            claimName: order-producer-persistent-volume-claim
