OrderProducerService.Api/k8s/k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-producer-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: order-producer-service
            port:
              number: 80
      # - path: /api/auth/login
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: auth-service
      #       port:
      #         number: 80
